# xtream-ai-assignment

./: .pre-commit-config.yml  Makefile  pyproject.toml
notebooks/: model.ipynb
