[tool.poetry]
name = "xtream-ai-assignment"
version = "0.1.0"
description = "Xstream assignment for AI Developer Position"
authors = ["Alejandro Viegener <alejandro.viegener@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = "5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "23.9.1"
pre-commit = "3.5.0"
pandas = "1.4.3"
ipykernel = "^6.28.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
